crates/djls-project/tests/snapshots/corpus__repos__django-6.1__django__templatetags__i18n.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::language_bidi":
    kind: filter
    has_doc: false
  "filter::language_name":
    kind: filter
    has_doc: false
  "filter::language_name_local":
    kind: filter
    has_doc: false
  "filter::language_name_translated":
    kind: filter
    has_doc: false
  "tag::blocktrans":
    kind: tag
    has_doc: false
  "tag::blocktranslate":
    kind: tag
    has_doc: false
  "tag::get_available_languages":
    kind: tag
    has_doc: false
  "tag::get_current_language":
    kind: tag
    has_doc: false
  "tag::get_current_language_bidi":
    kind: tag
    has_doc: false
  "tag::get_language_info":
    kind: tag
    has_doc: false
  "tag::get_language_info_list":
    kind: tag
    has_doc: false
  "tag::language":
    kind: tag
    has_doc: false
  "tag::trans":
    kind: tag
    has_doc: false
  "tag::translate":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "django.templatetags.i18n::tag::blocktrans":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - count
        - context
        - trimmed
        - asvar
      duplicate_rejection: detected
      unknown_rejection: detected
    argument_syntax: Unknown
    as_var: keep
  "django.templatetags.i18n::tag::blocktranslate":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - count
        - context
        - trimmed
        - asvar
      duplicate_rejection: detected
      unknown_rejection: detected
    argument_syntax: Unknown
    as_var: keep
  "django.templatetags.i18n::tag::get_available_languages":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: as
          requirement: required
          kind:
            Literal: as
        - name: arg2
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::get_current_language":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: as
          requirement: required
          kind:
            Literal: as
        - name: arg2
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::get_current_language_bidi":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: as
          requirement: required
          kind:
            Literal: as
        - name: arg2
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::get_language_info":
    arg_constraints:
      - Exact: 5
    required_keywords:
      - position:
          Forward: 1
        value: for
      - position:
          Forward: 3
        value: as
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: for
          requirement: required
          kind:
            Literal: for
        - name: arg2
          requirement: required
          kind: Variable
        - name: as
          requirement: required
          kind:
            Literal: as
        - name: arg4
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::get_language_info_list":
    arg_constraints:
      - Exact: 5
    required_keywords:
      - position:
          Forward: 1
        value: for
      - position:
          Forward: 3
        value: as
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: for
          requirement: required
          kind:
            Literal: for
        - name: arg2
          requirement: required
          kind: Variable
        - name: as
          requirement: required
          kind:
            Literal: as
        - name: arg4
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::language":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          PercentFormat:
            template: "'%s' takes one argument (language)"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::trans":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - noop
        - context
        - as
      duplicate_rejection: detected
      unknown_rejection: detected
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "'%s' takes at least one argument"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::translate":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - noop
        - context
        - as
      duplicate_rejection: detected
      unknown_rejection: detected
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "'%s' takes at least one argument"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
    as_var: keep
filter_arities:
  "django.templatetags.i18n::filter::language_bidi": no_argument
  "django.templatetags.i18n::filter::language_name": no_argument
  "django.templatetags.i18n::filter::language_name_local": no_argument
  "django.templatetags.i18n::filter::language_name_translated": no_argument
block_specs:
  "django.templatetags.i18n::tag::blocktrans":
    body_analysis_evidence: not_detected
    end_tag: endblocktrans
    intermediates:
      - plural
  "django.templatetags.i18n::tag::blocktranslate":
    body_analysis_evidence: not_detected
    end_tag: endblocktranslate
    intermediates:
      - plural
  "django.templatetags.i18n::tag::language":
    body_analysis_evidence: not_detected
    end_tag: endlanguage
    intermediates: []
