crates/djls-project/tests/snapshots/corpus__repos__django-6.1__django__templatetags__static.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::get_media_prefix":
    kind: tag
    has_doc: false
  "tag::get_static_prefix":
    kind: tag
    has_doc: false
  "tag::static":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs: {}
